# BeromLanguageTranslationBoard.github.io

./: .gitignore  .nojekyll  404.html  404.qmd  README.md  _quarto.yml  about.html  about.qmd  chatbot.html  hello.py  index.html  index.qmd  listings.json  pyproject.toml  robots.txt  search.json  sitemap.xml  styles.css
.github/workflows/: publish.yml
News/: index.html  index.qmd
News/2025-November-24_Wusal_Berom_2025/: wusal_berom_2025.html  wusal_berom_2025.qmd
News/Neha_e_ra_fwom_2025/: neha_e_ra_fwom_de_bltb_a_se_ra_e_shey_2025.html  neha_e_ra_fwom_de_bltb_a_se_ra_e_shey_2025.py  neha_e_ra_fwom_de_bltb_a_se_ra_e_shey_2025.qmd
News/reha_e_ra_repomo_bindi_Jul-28-2025/: reha_e_ra_repomo_bindi.html  reha_e_ra_repomo_bindi.qmd
blog/: index.html  index.qmd
blog/2024-February-26_Berom_numbers/: counting_in_Berom.html  counting_in_Berom.qmd
blog/2025-April-21_Berom_Poem/: a_Berom_is_a_Berom.html  a_Berom_is_a_Berom.qmd
blog/2025-April-25_Berom_Proverbs/: Berom_Proverb_on_Endurance.html  Berom_Proverb_on_Endurance.qmd
blog/2025-August-14_The_Apostles_Creed/: The_Apostles_Creed.html  The_Apostles_Creed.qmd
blog/2025-August-18_Lwele_Berom_gwo_tyiimin/: Lwele_Berom_gwo_tyiimin.html  Lwele_Berom_gwo_tyiimin.qmd
blog/2025-February-26_Berom_numbers/: counting_in_Berom.html  counting_in_Berom.qmd
blog/2025-July-21_Berom_Proverb/: proverb_on_similarities.html  proverb_on_similarities.qmd
blog/2025-June-17_Lem_Berom/: Lem_Berom.html  Lem_Berom.qmd
blog/2025-June-25_Nepeng/: nepeng.html  nepeng.qmd
blog/2025-March-06_Berom_Proverbs/: Berom_Proverbs.html  (+3 more)
(+14 files in other folders)
