[project]
name = "beromlanguagetranslationboard-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "itables>=2.2.5",
    "jupyter>=1.1.1",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
    "notebook>=7.4.3",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
]


[tool.setuptools.packages.find]
where = ["."]
exclude = ["img", "blog"]
